# loan-approval-agent

./: .gitignore  README.md  entry-points.json  main.py  pyproject.toml  uipath.json
docs/: README.md  loan_portal_demo.html  portal_config.example.js  serve.py  serve_config.example.py
src/loan_approval_agent/: __init__.py  agent.py
src/loan_approval_agent/actions/: __init__.py
src/loan_approval_agent/config/: settings.py
src/loan_approval_agent/models/: __init__.py  applicant.py  decision.py  documents.py  rules.py
src/loan_approval_agent/tools/: __init__.py  classifier.py  decision_generator.py  extractor.py  policy_retriever.py  prompts.py  validator.py
tests/: __init__.py  conftest.py  test_classifier.py  test_extractor.py
