[project]
name = "loan-agent-demo"
version = "0.1.0"
description = "Autonomous loan approval agent using UiPath Coded Agents and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Roboyo", email = "info@roboyo.global" }
]
dependencies = [
    "uipath-langchain>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.0",
    "docling>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loan_approval_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
